--- a/ProductoAl-Nassr.html
+++ b/ProductoAl-Nassr.html
@@ -25,8 +25,9 @@
 
 <section class="product-detail">
     <h2>Al Al-Nassr - Camiseta 2023</h2>
-    <img src="al-nassr.jpg" alt="Camiseta Al-Nassr" class="product-detail-image"
-    <p>Precio: 74.99€</p>
+    <img src="https://cf.camisetasfutbol.com.cn/upload/ttmall/img/20230817/10b6d1e397ba64d48bd905a1a3ff7d27.png" alt="Camiseta Al-Nassr" class="product-detail-image"
+    <p></p>
+    <p><strong>Precio: 74.99€</strong></p>
     <p>Descripción: Camiseta oficial del Al Nassr, el club saudí donde Cristiano Ronaldo juega actualmente. Con un diseño moderno y cómodo para todos los fanáticos.</p>
     <button class="add-to-cart">Añadir al carrito</button>
     
