--- a/ProductoPortugal.html
+++ b/ProductoPortugal.html
@@ -23,13 +23,16 @@
         </nav>
     </header>
 
-<section class="product-detail"
-    <h2>Portugal - Camiseta 2016</h2>
-    <img src="portugal.jpg" alt="Camiseta Portugal" class="product-detail-image"
-    <p>Precio: 99.99€</p>
-    <p>Descripción: Camiseta oficial de la selección Portuguesa, la misma que Cristiano Ronaldo usó en la histórica victoria en la eurocopa 2016</p>
-    <button class="add-to-cart">Añadir al carrito</button>
-</section>
+    <section id="product-RMA" class="product-detail">
+        <h2>Real Madrid - Camiseta 2016 Final eurocopa</h2>
+        <img src="https://acdn.mitiendanube.com/stores/002/003/574/products/portugal-titular-retro-2016-7-ronaldo-final-eurocopa-2016-vs-francia-2-b971f13670a863469317208193378404-1024-1024.png" alt="Manchester United" class="product-detail-image"
+        <p></p>
+        <p><strong>Precio: 101.99€</strong></p>
+        <p>Descripción: Camiseta Selección de Portugal Final Eurocopa 2016</p>
+        
+
+        <button class="add-to-cart" <button>Añadir al carrito</button>
+    </section>
 
 
 </body>
