--- a/ProductoJUV.html
+++ b/ProductoJUV.html
@@ -25,8 +25,8 @@
 
 <section id="product-3" class="product-detail">
     <h2>Juventus - Camiseta 2018</h2>
-    <img src="juventus.png" alt="Juventus" class="product-detail-image">
-    <p>Precio: 85.99€</p>
+    <img src="https://clipart.info/images/ccovers/1534042530adidas-cristiano-ronaldo-juventus-jersey-png.png" alt="Juventus" class="product-detail-image">
+    <p><strong>Precio: 84.99€</strong></p>
     <p>Descripción: Camiseta de la Juventus usada por Cristiano Ronaldo en su llegada al conjunto italiano</p>
     <button class="add-to-cart" >Añadir al carrito</button>
 </section>
