--- a/ProductoR.MADRID.html
+++ b/ProductoR.MADRID.html
@@ -7,12 +7,32 @@
     <link rel="stylesheet" href="cr7.css">
 </head>
 
+    <header>
+        <div class="logo">
+            <h1>CR7 Market</h1>
+        </div>
+        <nav>
+            <ul>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="productos.html">Productos</a></li>
+                <li><a href="contactos.html">Contacto</a></li>
+                <li><a href="redessociales.html">Redes Sociales</a></li>
+                <li><a href="carrito.html" class="active">Carrito</a></li>
+            </ul>
+        </nav>
+    </header>
+    
+    <section id="product-RMA" class="product-detail">
+        <h2>Real Madrid - Camiseta 2018 Final UEFA Champions League</h2>
+        <img src="https://cf.camisetasfutbol.com.cn/upload/ttmall/img/20230318/8cb87b92aaa0bbb536c7a119d512f2f6.png=z-450,450_f-webp" width="220"   alt="Manchester United" class="product-detail-image"
+        <p></p>
+        <p><strong>Precio: 99.99€</strong></p>
+        <p>Descripción: Camiseta del Real Madrid Final UEFA Champions League</p>
+        
 
-<section>
-    id="product.1" class="product-detail"
-    <h2>Real Madrid - Camiseta oficial CR7</h2>
-    <img src="real-madrid.png" alt="Real Madrid" class="product-detail-image"
-    <p>Precio: 99.99€</p>
-    <p>Descripción: Camiseta oficial del Real Madrid usada por Cristiano Ronaldo en la temporada 2017-2018</p>
-    <button class="add-to-cart">Añadir al carrito</button>
+        <button class="add-to-cart" <button>Añadir al carrito</button>
+    </section>
+
+</body>
+
 </section>
