--- a/productoMUD.html
+++ b/productoMUD.html
@@ -26,8 +26,9 @@
 
 <section id="product-2" class="product-detail">
     <h2>Manchester United - Camiseta 2008 Final UEFA Champions League</h2>
-    <img src="manchester.png" alt="Manchester United" class="product-detail-image"
-    <p>Precio: 92.99€</p>
+    <img src="https://acdn.mitiendanube.com/stores/003/316/085/products/camisa-nike-manchester-united-home-manga-longa-2008-final-moscow-match-day-man-u-ronaldo-7-2-9209091bcfd58d734b17014326893875-1024-1024.png" alt="Manchester United" class="product-detail-image"
+    <p></p>
+    <p><strong>Precio: 92.99€</strong></p>
     <p>Descripción: Camiseta del Manchester United Finl UEFA Champions League</p>
     <button class="add-to-cart" <button>Añadir al carrito</button>
 </section>
