--- a/index.html
+++ b/index.html
@@ -29,5 +29,7 @@
         </div>
     </section>
    
-    
+    <footer>
+        <p>&copy; 2024 CR7 Market. Todos los derechos reservados.</p>
+    </footer>
 </html>
