--- a/carrito.html
+++ b/carrito.html
@@ -14,8 +14,10 @@
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="productos.html">Productos</a></li>
                 <li><a href="contacto.html">Contacto</a></li>
-                <li><a href="redessociales.html">Redes Sociales</a></li>
                 <li><a href="carrito.html" class="active">Carrito</a></li>
+                <li><a href="Noticias.html">Noticias</a></li>
+                <li><a href="Historia.html">Historia</a></li>
+
                 
             </ul>
         </nav>
