--- a/productos.html
+++ b/productos.html
@@ -17,12 +17,14 @@
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="productos.html">Productos</a></li>
                 <li><a href="contactos.html">Contacto</a></li>
-                <li><a href="redessociales.html">Redes Sociales</a></li>
                 <li><a href="carrito.html" class="active">Carrito</a></li>
+                <li><a href="Noticias.html">Noticias</a></li>
+                <li><a href="Historia.html">Historia</a></li>
+
             </ul>
         </nav>
     </header>
-<h6>
+<h1>
     <section class="products">
         <a href="ProductoS.lisboa.html" class="product-button">
             <img src="https://a.espncdn.com/combiner/i?img=/i/teamlogos/soccer/500/2250.png" alt="Sporting de Lisboa" class="product-image">
@@ -60,7 +62,7 @@
         </a>
     </section>
 
-</h6>
+</h1>
 
 </body>
 </html>
