--- a/contactos.html
+++ b/contactos.html
@@ -18,8 +18,10 @@
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="productos.html">Productos</a></li>
                 <li><a href="contactos.html">Contacto</a></li>
-                <li><a href="redessociales.html">Redes Sociales</a></li>
                 <li><a href="carrito.html" class="active">Carrito</a></li>
+                <li><a href="Noticias.html">Noticias</a></li>
+                <li><a href="Historia.html">Historia</a></li>
+
             </ul>
         </nav>
     </header>
