--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
                 <li><a href="carrito.html" class="active">Carrito</a></li>
                 <li><a href="Noticias.html">Noticias</a></li>
                 <li><a href="Historia.html">Historia</a></li>
+                <li><a href="Palmarés.html">Palmarés</a></li>
+
 
             </ul>
         </nav>
