--- a/productos.html
+++ b/productos.html
@@ -19,6 +19,8 @@
                 <li><a href="carrito.html" class="active">Carrito</a></li>
                 <li><a href="Noticias.html">Noticias</a></li>
                 <li><a href="Historia.html">Historia</a></li>
+                <li><a href="Palmarés.html">Palmarés</a></li>
+
 
             </ul>
         </nav>
@@ -74,6 +76,6 @@
     <footer>
         <p>&copy; 2024 CR7 Market. Todos los derechos reservados.</p>
     </footer>
-    
+
 </body>
 </html>
