LenguajeCR7Market_SamuelSánchez

--- a/Palmarés.html
+++ b/Palmarés.html
@@ -56,6 +56,7 @@
         </div>
     </div>
 </section>
+</body>
 <footer>
     <p>&copy; 2024 CR7 Market. Todos los derechos reservados.</p>
 </footer>
